--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fasthand&display=swap");
+
 body {
   display: flex;
   justify-content: center;
@@ -57,6 +59,20 @@ body {
   background-position: center;
   background-color: transparent;
 }
+.enemy1 {
+  background-image: url("pixelpics/enemy_cobold.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+}
+.enemy2 {
+  background-image: url("pixelpics/enemy_bones.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+}
 
 /*IMPORTANT - is not working so far*/
 @keyframes blink {
@@ -80,11 +96,28 @@ body {
   display: flex;
   align-items: center;
 }
-
 .hero-lives img {
   width: 50px;
   margin-left: 10px;
 }
 #headlineLifes {
   color: white;
+}
+
+.enemy-defeat {
+  display: flex;
+  align-items: center;
+}
+.enemy-defeat img {
+  width: 50px;
+  margin-left: 10px;
+}
+#headlineLifes {
+  color: white;
+}
+
+#enemydeathcounter {
+  color: rgb(238, 237, 203);
+  font-family: "Fasthand", cursive;
+  font-size: 25px;
 }
