--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fasthand&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=VT323&display=swap');
 
 body {
   display: flex;
@@ -52,27 +52,30 @@ body {
   background-position: center;
 }
 
+
+
+
 .enemy {
-  background-image: url("pixelpics/enemy_rat.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
 }
 .enemy1 {
-  background-image: url("pixelpics/enemy_cobold.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: transparent;
+  background-image: url("pixelpics/enemy_rat.png");
+ 
 }
 .enemy2 {
-  background-image: url("pixelpics/enemy_bones.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: transparent;
+  background-image: url("pixelpics/enemy_cobold.png");
+  
 }
+.enemy3 {
+  background-image: url("pixelpics/enemy_bones.png");
+}
+
+
+
+
 
 /*IMPORTANT - is not working so far*/
 @keyframes blink {
@@ -118,6 +121,11 @@ body {
 
 #enemydeathcounter {
   color: rgb(238, 237, 203);
-  font-family: "Fasthand", cursive;
-  font-size: 25px;
+  font-family: 'VT323', monospace;
+  font-size: 50px;
+}
+
+#playButton{
+  width: 50px;
+  margin-left: 10px;
 }
